--- a/index.html
+++ b/index.html
@@ -119,9 +119,13 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Web Designer | Dapp Developer</h3>
-                    <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est
-                        tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet
-                        lorem diam dolor justo et dolor dolor dolor</p>
+                    <p>Being a computer science graduate specialized in blockchain technology, that enables me to
+                        confidently develop decentralized applications (dApps) that are secure and transparent. Beyond
+                        blockchain, I have a solid grasp of frontend development, allowing me to create responsive user
+                        interfaces that integrate seamlessly with backend systems. Additionally, my skills in database
+                        management ensure that I can effectively handle data storage, retrieval, and manipulation,
+                        maintaining the integrity and performance of applications.
+                    </p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2">
                             <h6>Name: <span class="text-secondary">Tshering Dorji</span></h6>
@@ -568,8 +572,8 @@
                                 <h3>High Fidelity Design & Prototype</h3>
                                 <img src="img/ride-hifi.png" alt="High Fidelity Design" />
                                 <img src="img/ride-proto.png" alt="High Fidelity Design" />
-                                <p><a href="https://www.figma.com/proto/Eh4fT3irFOoBmzyJnz91UX/Ride-Sharing?node-id=1-5811&t=wAVLnKe64BS1GsT4-1&scaling=min-zoom&content-scaling=fixed&page-id=1%3A3282&starting-point-node-id=9%3A6305"
-                                        target="_blank">View Prototype</a></p>
+                                <p><a href="https://www.figma.com/design/Eh4fT3irFOoBmzyJnz91UX/Ride-Sharing?node-id=0-1&t=5xLkjZjqEdGB203V-1"
+                                        target="_blank">View Design</a></p>
                             </section>
 
                             <section>
@@ -723,8 +727,8 @@
                                 <h3>High Fidelity Design & Prototype</h3>
                                 <img src="img/cake-hifi.png" alt="High Fidelity Design" />
                                 <img src="img/cake-proto.png" alt="High Fidelity Design" />
-                                <p><a href="https://www.figma.com/proto/Eh4fT3irFOoBmzyJnz91UX/Ride-Sharing?node-id=1-5811&t=wAVLnKe64BS1GsT4-1&scaling=min-zoom&content-scaling=fixed&page-id=1%3A3282&starting-point-node-id=9%3A6305"
-                                        target="_blank">View Prototype</a></p>
+                                <p><a href="https://www.figma.com/design/Ei44JxQ4jU1nVwdL8PDqeL/Cake_website_three?t=5xLkjZjqEdGB203V-1"
+                                        target="_blank">View Design</a></p>
                             </section>
 
                             <section>
@@ -855,8 +859,9 @@
                                             alt="Prototype Design" />
                                         <p>
                                             <a id="prototypeLink"
-                                                href="https://www.figma.com/proto/mobile-campease-link" target="_blank">
-                                                View Prototype
+                                                href="https://www.figma.com/design/X0UmrEx7Wc0XAiowyE5ESw/CampEase_website1_responsive?t=5xLkjZjqEdGB203V-1"
+                                                target="_blank">
+                                                View Design
                                             </a>
                                         </p>
                                     </div>
@@ -1171,7 +1176,7 @@
                     lofiImg.src = "img/campease-website-lofi.png";
                     hifiImg.src = "img/campease-website-hifi.png";
                     prototypeImage.src = "img/campease-website-proto.png"; // NEW
-                    prototypeLink.href = "https://www.figma.com/proto/website-campease-link";
+                    prototypeLink.href = "https://www.figma.com/design/X0UmrEx7Wc0XAiowyE5ESw/CampEase_website1_responsive?t=5xLkjZjqEdGB203V-1";
                     label.textContent = "Switched to: Website";
                 } else {
                     // Mobile App View
@@ -1179,7 +1184,7 @@
                     lofiImg.src = "img/campease-mobile-lofi.png";
                     hifiImg.src = "img/campease-mobile-hifi.png";
                     prototypeImage.src = "img/campease-monile-proto.png"; // NEW
-                    prototypeLink.href = "https://www.figma.com/proto/mobile-campease-link";
+                    prototypeLink.href = "https://www.figma.com/design/X0UmrEx7Wc0XAiowyE5ESw/CampEase_website1_responsive?t=5xLkjZjqEdGB203V-1";
                     label.textContent = "Switched to: Mobile App";
                 }
 
@@ -1239,8 +1244,8 @@
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init({
-                duration: 1000, // animation duration
-                once: true      // only animate once on scroll
+                duration: 1000,
+                once: true
             });
         </script>
 </body>
